--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "element-plus": "^1.2.0-beta.3",
     "lodash": "^4.17.21",
     "vue": "^3.0.4",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
