--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@element-plus/icons": "^0.0.11",
+    "@vitejs/plugin-vue": "^2.2.4",
     "axios": "^0.21.1",
     "element-plus": "^1.2.0-beta.3",
     "lodash": "^4.17.21",
@@ -17,6 +18,6 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "sass": "^1.49.9",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^2.0"
   }
 }
