--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
     "@vue/compiler-sfc": "^3.0.4",
     "sass": "^1.49.9",
     "vite": "^2.0"
-  }
+  },
+  "homepage": "https://lqh175643.github.io/vite-project"
 }
