[qiuhong] feat: add deploy config

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with:
-          - token: ${{ secrets.ACTION_DEMO }}
+          token: ${{ secrets.ACTION_DEMO }}
 
       - name: Install and Build
         run: |
