[qiuhong] feat: add deploy config

--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "sass": "^1.49.9",
     "vite": "^2.0"
   },
-  "homepage": "https://lqh175643.github.io/vite-project"
+  "homepage": "https://lqh175643.github.io/bs"
 }
