--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
-        env:
+        with:
           token: ${{ secrets.ACTION_DEMO }}
           branch: master
           folder: build
