--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -32,4 +32,4 @@ jobs:
         with:
           token: ${{ secrets.ACTION_DEMO }}
           branch: master
-          folder: bs/build
+          folder: dist
