--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
+  "homepage": "https://lqh175643.github.io/bs",
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.4",
     "sass": "^1.49.9",
     "vite": "^2.0"
-  },
-  "homepage": "https://lqh175643.github.io/bs"
+  }
 }
