[qiuhong] feat: fix config

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,11 +24,10 @@ jobs:
 
       - name: Install and Build
         run: |
-          npm ci
+          npm i
           npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: dist
-          branch: gh-pages
